# pascal

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: ci-cd.md  contributing.md  index.md  installation.md  quickstart.md  uv-integration.md  workspace.md
docs/commands/: add.md  build.md  check.md  create.md  deps.md  diff.md  index.md  info.md  init.md  run.md  sync.md  test.md
src/: cli.rs  config.rs  display.rs  error.rs  git.rs  main.rs  template.rs  uv.rs  workspace.rs
src/commands/: add.rs  build.rs  check.rs  create.rs  deps.rs  diff.rs  info.rs  init.rs  mod.rs  run.rs  sync.rs  test.rs
tests/: integration.rs
